@@ -4,6 +4,7 @@ CHANGES.txt - 2011-08-11
 CHANGES IN CUPS V1.5.1
 
 	- Documentation updates (STR #3885)
+	- The ipptool program did not validate UTF-8 strings in XML output.
 	- Fixed supply level reporting for some printers.
 	- The scheduler no longer automatically logs debug messages for jobs
 	  that were held or canceled.
